# LabOyD

./: .gitignore  keithley_data_reader.py  pyproject.toml  readme.md
Data/DataLogger_Dimensional/: DIM-01-MUL_1000 DIC23.csv  DIM-01-MUL_1000 DIC23_cleanHeader.csv  DIM-01-MUL_1000_21_11_24.csv  DIM-01-MUL_1000_21_11_24_cleanHeader.csv  DIM_-_2_0_21-11-24.csv
Estadistica/: incertidumbre_resolucion.py
FlechaInterfranja/: ai_lines.py  crop_images.py  crop_images.sh  flecha_interfranja.py  interferogram_generation.py  montecarlo_fei.py  montecarlo_fei_multithreading.py
Optica/: colimadora.py  interferograma_simulado_simple.py
SLM/: sim_calibration.py
Varios/: ai_based_optimization.py  busqueda.py  color_fondo.py  debug_from_pickle.py  images.py  lines_points.py  optimizations.py  plot.py  profiling_show_stats.py
src/Certificados/: pdf_certificado.py  pdf_extras.py  template_planos.py
tests/: test_associate_lines.py  test_fei.py  test_interferogram_generation.py  test_pdf_certificado.py
utils/: certificado_bp.py  certificado_planos.py  plot_temperature_datalogger.py
